--- a/package.json
+++ b/package.json
@@ -15,16 +15,29 @@
   "dependencies": {
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/barcode-scanner": "^5.43.0",
+    "@awesome-cordova-plugins/geolocation": "^5.44.0",
+    "@awesome-cordova-plugins/native-geocoder": "^5.43.0",
+    "@capacitor-community/facebook-login": "^3.4.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.5.1",
+    "@capacitor/google-maps": "^1.1.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@codetrix-studio/capacitor-google-auth": "^3.1.4",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
+    "firebase": "^9.9.0",
+    "ngx-socket-io": "^4.3.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -41,6 +54,7 @@
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "3.5.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/lab": "3.2.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
